<resources>
    <string name="app_name">OOOAKSINYA</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_dot">.</string>
    <string name="number_0">0</string>
    <string name="number_equals">=</string>
    <string name="number_minus">-</string>
    <string name="number_division">÷</string>
    <string name="number_increase">×</string>
    <string name="number_plus">+</string>
    <string name="number_removal">c</string>
    <string name="number_erasing">→</string>
    <string name="number_percent">%</string>
    <string name="number_smile">☺</string>
    <string name="dark_style">Dark style</string>
    <string name="light_style">Light style</string>

</resources>