<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/MyStyle"
    tools:context=".ui.MainActivity">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize"
        android:textColor="#0048FF"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/MyStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_1"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cornerRadius="@dimen/radiusCurve"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_2"
        app:layout_constraintTop_toTopOf="@id/button1"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@id/button3"
        app:cornerRadius="@dimen/radiusCurve"
         />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/button2"
        app:layout_constraintEnd_toEndOf="@id/button_division"
        android:text="@string/number_3"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:cornerRadius="@dimen/radiusCurve"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_4"
        app:layout_constraintStart_toStartOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:cornerRadius="@dimen/radiusCurve"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_5"
        app:layout_constraintTop_toBottomOf="@id/button2"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintBottom_toTopOf="@id/button8"
        app:cornerRadius="@dimen/radiusCurve"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_6"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button3"
        app:layout_constraintEnd_toEndOf="@id/button_increase"
        app:cornerRadius="@dimen/radiusCurve"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_7"
        app:layout_constraintStart_toStartOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:cornerRadius="@dimen/radiusCurve"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_8"
        app:layout_constraintTop_toBottomOf="@id/button5"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:cornerRadius="@dimen/radiusCurve"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_9"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/button6"
        app:layout_constraintEnd_toEndOf="@id/button_minus"
        app:cornerRadius="@dimen/radiusCurve"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_dot"
        app:layout_constraintStart_toStartOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@id/button7"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_0"
        app:layout_constraintTop_toBottomOf="@id/button8"
        app:layout_constraintStart_toEndOf="@id/button_dot"
        app:layout_constraintEnd_toStartOf="@id/button_equals"
        app:cornerRadius="@dimen/radiusCurve"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_equals"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintTop_toBottomOf="@id/button9"
        app:layout_constraintEnd_toEndOf="@id/button_plus"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_division"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toTopOf="@id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_increase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_increase"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toTopOf="@id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_minus"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintTop_toTopOf="@id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_plus"
        app:layout_constraintStart_toEndOf="@id/button_equals"
        app:layout_constraintTop_toTopOf="@id/button_equals"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_removal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_removal"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintStart_toStartOf="@id/button1"
        app:layout_constraintEnd_toEndOf="@id/button1"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_erasing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_erasing"
        app:layout_constraintBottom_toTopOf="@id/button2"
        app:layout_constraintStart_toStartOf="@id/button2"
        app:layout_constraintEnd_toEndOf="@id/button2"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_percent"
        app:layout_constraintBottom_toTopOf="@id/button3"
        app:layout_constraintStart_toStartOf="@id/button3"
        app:layout_constraintEnd_toEndOf="@id/button3"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_smile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_smile"
        app:layout_constraintBottom_toTopOf="@id/button_division"
        app:layout_constraintStart_toStartOf="@id/button_division"
        app:layout_constraintEnd_toEndOf="@id/button_division"
        />

<!--    <RadioGroup-->
<!--        android:id="@+id/radioButtons"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/button_removal">-->

<!--    <com.google.android.material.radiobutton.MaterialRadioButton-->
<!--        android:id="@+id/radioButtonMaterialLight"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        -->
<!--        android:text="@string/light_style" />-->

<!--    <com.google.android.material.radiobutton.MaterialRadioButton-->
<!--        android:id="@+id/radioButtonMaterialDark"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:text="@string/dark_style" />-->
<!--    </RadioGroup>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

